<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">SMS</string>
    <string name="title_dash_board">Dashboard</string>
    <string name="title_charging_fuctions">Services</string>
    <string name="title_map">Map</string>
    <string name="title_route_planner">Route planner</string>
    <string name="title_network_setting">Switch network</string>
    <string name="title_logout">Log out</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_dashborad">Dashboard</string>
    <string name="title_route_detail">Route details</string>
    <string name="title_route_planner_s">Service route planner</string>
    <string name="dashboard_charge_func">Services</string>
    <string name="dashboard_map">Map</string>
    <string name="dashboard_route_planner">Route planner</string>
    <string name="dashboard_network_setting">Switch network</string>
    <string name="dashboard_logout">Log out</string>
    <string name="dashboard_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="password">Please enter password</string>
    <string name="account">Please enter userID</string>
    <string name="remember_me">Remember me</string>
    <string name="loading">Loading...</string>
    <string name="results">Results</string>
    <string name="route_tv_distance">Total distance</string>
    <string name="route_detail_tv_distance">Distance</string>
    <string name="route_tv_fare">Fare          </string>
    <string name="route_tv_visit">Visiting sequence</string>
    <string name="route_tv_duration">Duration</string>
    <string name="button_navi">Start navigation</string>
    <string name="route_planner_service_des">Specify your origin and destination and tick the charging locations 
        to stop by. And then tap the compass button to get the suggested routes.
	</string>
    <string name="route_tv_copyrights">Copyrights</string>
    <string name="route_tv_warn">Warn</string>
    <string name="route_tv_origin">Origin</string>
    <string name="route_tv_des">Destination</string>
    <string name="route_tv_waypoints">Waypoints</string>
	<string name="route_tv_instructions">Instructions</string>
    <string name="charger_title">Charger:</string>
    <string name="evse_title">EVSE:</string>
    <string name="reboot">Reboot charger</string>
    <string name="reset">Reset charger</string>
    <string name="disable">Disable charger</string>
    <string name="enable">Enable charger</string>
    <string name="firmware">Initiate firmware update</string>
    <string name="whitelist">Initiate whitelist update</string>
    <string name="firmware_title">Choose the firmware version</string>
    <string name="version">(Current version: %s)</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="update">UPDATE</string>
    <string name="whitelist_title">Initiate whitelist update</string>
    <string name="whitelist_content">Click update to sync the latest whitelist</string>
    <string name="start_charge">Start charging session</string>
    <string name="stop_charge">Stop charging session</string>
    <string name="release_lock">Release lock</string>
    <string name="enable_evse">Enable EVSE</string>
    <string name="disable_evse">Disable EVSE</string>
    <string name="maps_title">Current location</string>
    <string name="maps_words">Not specified - use device current location</string>
    <string name="maps_word">Pinch to zoom and swipe to navigate. Charging locations with faulted chargers are marked in red. Click on the markers for more detailed information about the location.</string>
    <string name="choose_location">Choose a location</string>
    <string name="chargig_location_map">Charging location map</string>
    <string name="near_by_location">Nearby charging locations</string>
    <string name="loc_away_from">KM away from current location</string>
    <string name="copy_loc_info">Copy the location info to clipboard</string>
    <string name="event_log_all">ALL</string>
    <string name="event_log_charger">CHARGER</string>
    <string name="event_log_evse">&#160;&#160;&#160;EVSE</string>
    <string name="event_log_config">CONFIG</string>
    <string name="event_log_info">INFO</string>
    <string name="event_log_event">Event</string>
    <string name="event_log_occur">Occurrence</string>
    <string name="event_log_clearance">Clearance</string>
    <string name="event_log_chargerId">Charger Id</string>
	<string name="event_log_evseId">EvseId</string>
	<string name="no_event_found">No event log found</string>
    <string name="network_content">Please select a charging network from the dropdown list. 
        You can change the charging network in Dashboard 
        > Switch network, or specify the preferred network in Dashboard 
        > Settings.
    </string>
    <string name="network_next">ENTER NETWORK</string>
    <string name="title_activity_select_network">Select charging network</string>
    <string name="select_network">Please select a network</string>
    <string name="select_network_company">Company</string>
    <string name="select_network_state">State</string>
    <string name="select_network_contact">Contact</string>
    <string name="select_network_address">Address</string>
    <string name="select_network_phone">Phone</string>
    <string name="select_network_mobile">Mobile</string>
    <string name="select_network_mail">Mail</string>
    <string name="setting_network">Preferred charging network</string>
    <string name="setting_language">Language</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_cn">中文</string>
    <string name="EVSE">EVSE    </string>
    <string name="Charger">Charger </string>
    <string name="Location">Location</string>
    <string name="Event">Event </string>
    <string name="Map">Map</string>
    <string name="Info">Info</string>
    <string name="Actions">Actions</string>
    <string name="Select_Location">Please select the Location</string>
    <string name="Select_Charger">Please select the Charger</string>
    <string name="Select_EVSE">Please select the EVSE</string>
    <string name="load_failed">Please check the network</string>
    <string name="Location_Info">Location Info</string>
    <string name="no_location">Please fill in the Location</string>
    <string name="no_charger">Please fill in the Charger</string>
    <string name="Location_name">Location name</string>
    <string name="Phone_numbers">Phone numbers</string>
    <string name="Mobile">Mobile</string>
    <string name="Mail">Mail</string>
    <string name="Address">Address</string>
    <string name="Coordinates">Coordinates</string>
    <string name="Note">Note</string>
    <string name="Sure_to_upload_photo">Upload this photo?</string>
    <string name="Prompt">Prompt</string>
    <string name="Sure">Sure</string>
    <string name="Cancel">Cancel</string>
    <string name="ChargerID">Charger ID:</string>
    <string name="ChargerName">Charger Name:</string>
    <string name="Status">Status:</string>
    <string name="Type">Type:</string>
    <string name="Description">Description:</string>
    <string name="charger_info">Charger Info</string>
	<string name="select_network_current_network">Current charging network</string>
	<string name="load_event_log_data_finish">Event log data load finished</string>
	<string name="longitude">Longitude:</string>
	<string name="latitude">, Latitude:</string>
	<string name="dialog_setting">SETTINGS</string>
	<string name="dialog_retry">RETRY</string>
	<string name="dialog_net_alert">Check your connection and try again</string>
	<string name="dialog_gps_alert">Please turn on GPS and try again</string>
	<string name="action_failed">Fail, check your connection and try again</string>
	<string name="alert_no_route">  There is no such route</string>
	<string name="alert_no_any_route">No any route</string>
	<string name="alert_no_part_route">Failed to get part of the route</string>
	<string name="alert_no_location">Fail to get location</string>
	<string name="alert_no_map">Please to install Google map</string>
	<string name="alert_select_net">Please select a network</string>
	<string name="alert_select_waypoint">Please select waypoints</string>
	<string name="current_location">My current location</string>
	<string name="alert_too_more_points">You can not choose more waypoints</string>
	 <string name="network_content2">You can change the network setting in the</string>
	   <string name="network_content3">Dashboard>Settings.</string>
	   <string name="event_log">Event log</string>
	   <string name="back_toast">Press again to exit</string>
	<string name="filt_title">Filter by event type</string>
	<string name="filt_emergency">Emergency</string>
	<string name="filt_fault">Fault</string>
	<string name="filt_warning">Warning</string>
	<string name="filt_info">Information</string>
	<string name="filt_config">Configration</string>
	<string name="filt_charger">Charger</string>
	<string name="no_sim">No SIM card</string>
	<string name="offline">Offline</string>
	<string name="available">Available</string>
	<string name="occupied">Occupied</string>
	<string name="reserved">Reserved</string>
	<string name="unavailable">Unavailable</string>
	<string name="faulted"> Faulted</string>
	<string name="goolge_map_no_support">Google map is not supported </string>
	<string name="no_charge_link">No charge to link</string>
	<string name="command_alert">Your command has been sent, please wait for the result</string>
	<string name="login_again">For Account changes, please log in again</string>
	<string name="uid_null">UserID can not be empty</string>
	<string name="pw_null">Password can not be empty</string>
	<string name="time_error">The end time should not be less than the starting time!</string>
	<string name="description">Description</string>
	<string name="error">Error</string>
	<string name="user">User</string>
	<string name="solution">Solution</string>
	<string name="value">Value</string>
	<string name="key">Key</string>
	<string name="oldvalue">OldValue</string>
	<string name="newvalue">NewValue</string>
	<string name="status">Status</string>
	<string name="event_detail">Event details</string>
	<string name="detail_null"> </string>
	<string name="about_version">Version</string>
	<string name="terms_of_service">Terms of service </string>
	<string name="privacy_policy">Privacy policy </string>
	<string name="open_source_license">Open source license </string>
	<string name="km">km</string>
	<string name="min">min</string>
	<string name="no_more">No more</string>
	<string name="no_event">No event</string>
    <string name="charger_cl_dc_01">Charger:CL-DC-01</string>
    <string name="_offline">(offline)</string>
    <string name="disable_recifier">Disable Recifier</string>
    <string name="chargerid">ChargerID</string>
    <string name="a3_1">A3-1</string>
    <string name="_1">1</string>
    <string name="_status">Status</string>
    <string name="_ok">OK</string>
    <string name="type">Type</string>
    <string name="delta_ev_quick_charger">Delta EV Quick Charger</string>
    <string name="evse_0">EVSE 0</string>
    <string name="_description">Description</string>
    <string name="installed_by_abc_corp">Installed by ABC CORP</string>
    <string name="_2015_08_04_08_02_am">2015-08-04 08:02 am.</string>
    <string name="http_172_22_35_131_7001_emea">http://172.22.35.131:7001/EMEA/</string>
    <string name="ongoing">Ongoing</string>
    <string name="http_172_22_35_155_7001_emea">http://172.22.35.155:7001/EMEA/</string>
    <string name="http_172_22_35_163_7001_emea">http://172.22.35.163:7001/EMEA/</string>
    <string name="http_172_22_35_140_7001_emea">http://172.22.35.140:7001/EMEA/</string>
    <string name="http_172_22_35_146_7001_emea">http://172.22.35.146:7001/EMEA/</string>
</resources>