<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_dash_board"
        android:icon="@drawable/dashboard"
        android:title="@string/title_dash_board"/>
    <item
        android:id="@+id/item_charging_functions"
        android:icon="@drawable/charging_functions"
        android:title="@string/title_charging_fuctions"/>
    <item
        android:id="@+id/item_map"
        android:icon="@drawable/map"
        android:title="@string/title_map"/>
    <item
        android:id="@+id/item_route_planner"
        android:icon="@drawable/ic_menu_route_planner"
        android:title="@string/title_route_planner"/>
    <item
        android:id="@+id/item_network_setting"
        android:icon="@drawable/network_setting"
        android:title="@string/title_network_setting"/>
    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings"/>
    <item
        android:id="@+id/item_about"
        android:icon="@drawable/dashboard"
        android:title="@string/title_about"/>
    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/log_out"
        android:title="@string/title_logout"/>

   

</menu>