<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.delta.smsandroidproject"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="5dp"
    android:layout_margin="@dimen/event_log_marging_8dp"
    >
    <LinearLayout 
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:background="@color/layout_gray_delta"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/event"
            android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1.2"
	        android:gravity="center"
	        android:textColor="@color/white_delta"
	        android:background="@color/h_gray_delta"
	        android:padding="@dimen/event_log_marging_2dp"
	        android:text="@string/event_log_charger"/>
        <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:padding="@dimen/event_log_marging_8dp"
	        android:orientation="vertical">
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/event_log_event"/>
		        <TextView 
		            android:id="@+id/eventDetail"
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.5"
			        android:layout_marginLeft="@dimen/event_log_marging_8dp"
			        android:text="@string/disable_recifier"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/chargerIdLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/event_log_chargerId"/>
		        <TextView 
		            android:id="@+id/chargerId"
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.5"
			        android:layout_marginLeft="@dimen/event_log_marging_8dp"
			        android:text="@string/_1"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:id="@+id/evseIdLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/event_log_evseId"/>
		        <TextView 
		            android:id="@+id/evseId"
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.5"
			        android:layout_marginLeft="@dimen/event_log_marging_8dp"
			        android:text="@string/evse_0"/>
	        </LinearLayout>
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/event_log_occur"/>
		        <TextView 
		            android:id="@+id/occur"
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="left"
			        android:layout_weight="0.5"
			        android:layout_marginLeft="@dimen/event_log_marging_8dp"
			        android:text="@string/_2015_08_04_08_02_am"/>
	        </LinearLayout>
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/event_log_clearance"/>
		        <TextView 
		            android:id="@+id/clearance"
		            android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="left"
			        android:layout_weight="0.5"
			        android:layout_marginLeft="@dimen/event_log_marging_8dp"
			        android:text="@string/ongoing"/>
	        </LinearLayout>
	    </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
