<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/download_img"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_launcher" />
             <ImageView
                 android:id="@+id/camera_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="bottom|right"
                    android:src="@drawable/xiangji" >
                </ImageView>
        </FrameLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="vertical"
            android:background="@color/c_ededed">
             <android.support.v7.widget.RecyclerView
                    android:id="@+id/evse_recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />  
           
         
          
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/chargerid"/>
        <TextView 
            android:id="@+id/charger_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a3_1"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/_status"/>
        <TextView 
            android:id="@+id/charger_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_ok"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/type"/>
        <TextView 
            android:id="@+id/charger_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delta_ev_quick_charger"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/_description"/>
        <TextView 
            android:id="@+id/charger_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installed_by_abc_corp"/>
       
    </LinearLayout>

</LinearLayout>